# lsap

lab1/: Dockerfile  Taskfile.yaml  requirements.txt  server.py
lab2/: Dockerfile-v1  Dockerfile-v2  Taskfile.yaml  deployment-v1.yaml  deployment-v2.yaml  ingress.yml  pyproject.toml  requirements.txt  server-v1.py  server-v2.py  service.yml
lab2/pixmatch/: requirements.txt
mini-project/: .gitignore  README.md  Taskfile.yml  monolithic_backend.py  pyproject.toml
mini-project/benchmark/: generate_mock_data.ipynb  user_template.csv
