[tool.poetry]
name = "lab1"
version = "0.1.0"
description = ""
authors = ["andre.liang <namwoam@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.12"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"